--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap" />
+  <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,500&family=Cormorant+Garamond:wght@700&family=Cormorant:ital,wght@0,300;0,400;0,600;0,700;1,400;1,500;1,600&family=EB+Garamond&family=Lato:wght@300;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
