Change html title, conditionally load desktop/mobile sidebar, easeTo point on addFeature

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>The Prince: City Manager</title>
+  <title>The Second Tradition</title>
 
   <link href='https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css' rel='stylesheet' />
 
